Part of Java 1.5 upgrade: IntegerValues obsolete since 1.5 Integer class provides this. StringList obsolete, since ArrayList<String> is now provided.
--HG--
extra : convert_revision : svn%3A5c944932-937e-0410-aa5c-9344c804e6c3/trunk%401295