@@ -6,7 +6,6 @@ import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.LinkedList;
-import org.cdlib.xtf.util.IntegerValues;
 import org.cdlib.xtf.util.Trace;
 import net.sf.saxon.expr.XPathContext;
 import net.sf.saxon.om.Item;
@@ -122,9 +121,9 @@ public class ProfilingListener implements TraceListener
       countMap.put(instr, pc);
     }
 
-    if (!pc.nodes.containsKey(IntegerValues.valueOf(nodeNum))) {
+    if (!pc.nodes.containsKey(Integer.valueOf(nodeNum))) {
       pc.count++;
-      pc.nodes.put(IntegerValues.valueOf(nodeNum), new Boolean(true));
+      pc.nodes.put(Integer.valueOf(nodeNum), new Boolean(true));
     }
   } // bumpCount()
 
